docs/java: 添加 Java 版本功能历史文档
- 新增 concurrency、gc、instanceof、lambda等功能的历史演进文档- 按版本详细介绍了各功能的新增特性和改进内容- 提供了丰富的代码示例和使用说明
- 总结了各功能的核心优势和最佳实践