@@ -1,165 +1,240 @@
 # Java 11
 
-- JEP 181: 基于嵌套的访问控制
-- 新增 String API：Java 11 新特性—新增 String API
-- JEP 321：全新的 HTTP 客户端 API：Java 11 新特性—全新的 HTTP 客户端 API
-- JEP 323：局部变量类型推断的升级：Java 11 新特性—局部变量类型推断的增强
-- JEP 318：Epsilon—低开销垃圾回收器
-- ZGC：可伸缩低延迟垃圾收集器
-- JEP 335：废弃 Nashorn JavaScript 引擎
-- 增加 Files API：Java 11 新特性—新增 Files API
-- Optional API 增强：Java 11 新特性—Optional API 的增强
-- JEP 328：飞行记录器（Flight Recorder）
-- JEP 330：运行单文件源码程序
-- JEP 320：删除 Java EE 和 corba 模块
-
----
+- **JEP 181**: 基于嵌套的访问控制
+- **JEP 309**: 动态类文件常量
+- **JEP 315**: 改进 Aarch64 内联函数
+- **JEP 318**: Epsilon：无操作垃圾收集器
+- **JEP 320**: 移除 Java EE 和 CORBA 模块
+- **JEP 321**: HTTP Client（标准化）
+- **JEP 323**: Lambda 参数的局部变量语法
+- **JEP 324**: 使用 Curve25519 和 Curve448 进行密钥协商
+- **JEP 327**: Unicode 10
+- **JEP 328**: 飞行记录器
+- **JEP 329**: ChaCha20 和 Poly1305 加密算法
+- **JEP 330**: 启动单文件源代码程序
+- **JEP 331**: 低开销堆分析
+- **JEP 332**: 传输层安全（TLS）1.3
+- **JEP 333**: ZGC：可扩展的低延迟垃圾收集器（实验性）
+- **JEP 335**: 弃用 Nashorn JavaScript 引擎
+- **JEP 336**: 弃用 Pack200 工具和 API
 
 ## JEP 181: 基于嵌套的访问控制
-Java 一直以来都支持嵌套类，包括静态嵌套类（static nested classes）和非静态嵌套类（inner classes）。这些嵌套类允许我们在逻辑上更紧密地组织相关的类，提高代码的可读性和可维护性。
 
-但是在 Java 11 之前，为了让嵌套类能够访问彼此的私有成员，编译器需要生成桥接方法（bridge methods）或合成字段（synthetic fields）。这些是一些额外的、通常是不必要的公共方法和字段。这种方式违反了封装原则也有一定的性能和安全问题。
+基于嵌套的访问控制允许在嵌套类和宿主类之间更灵活地访问私有成员。在 Java 11 之前，嵌套类（内部类、局部类和匿名类）对宿主类的私有成员的访问是通过合成访问方法实现的，这可能会在字节码层面暴露一些不必要的细节。基于嵌套的访问控制通过在类文件结构中引入嵌套成员访问机制，使得这种访问更加安全和直接。
 
-所以，需要有一种机制来优化嵌套类之间的访问控制，同时保持代码的封装性和清晰性。于是，Java 11 引入嵌套类访问控制，该特性解决了内部类与外部类之间访问控制的问题。
+例如，在一个内部类中访问宿主类的私有字段时，不再需要通过合成访问方法，而是直接在类文件中表明这种嵌套关系，从而简化了访问控制模型，提高了代码的安全性和可维护性。
 
-主要内容有两点：
-1. **引入Nest 的概念**：  
-    - nest 是一个新引入的概念。一个 nest 由一个顶层类（nest host）和它的所有内部类（nest members）组成。它允许一个 nest 中的所有类相互看到对方的私有成员（private fields, methods, and constructors）。
-2. **引入两个属性**：
-   - NestHost 属性标识了一个类的 nest host。
-   - NestMembers 属性列出了属于同一个 nest 的所有成员。
-   - 这些属性被添加到 class 文件格式中，允许 JVM 在类加载时确定哪些类是同一个 nest 的一部分。
+## JEP 309: 动态类文件常量
 
-## 新增 String API
-Java 11 为了更好地处理字符串引入了几个新的 API。
-- **isBlank()**：检查字符串是否为空或仅包含空白字符
-- **lines()**：分割获取字符串流（Stream）
-- **strip()**：去除字符串首尾的空白字符
-- **repeat(n)**：复制字符串
+动态类文件常量允许在运行时动态生成类文件中的常量。在 Java 11 之前，类文件中的常量池是在编译时确定的，这限制了一些动态代码生成和优化的场景。通过动态类文件常量，开发者可以在运行时根据需要动态地创建和修改类文件中的常量，从而为更灵活的代码生成和优化提供了支持。
 
-## JEP 321：全新的 HTTP 客户端 API
-在 Java 11 之前，Java 提供了`HttpURLConnection`类，但这个类的功能比较基础，但是随着时间的流逝，要求变得越来越复杂，对应用程序的要求也越来越高，导致该类越来越不方便了。在Java 9的时候，引入了一个新的HTTP客户端API（`HttpClient`）作为作为实验特性，到了 Java 11，则被标准化并正式成为Java标准库的一部分。
+例如，在一些动态代理框架中，可以根据不同的请求动态生成不同的类文件常量，从而实现更高效的代理逻辑。
 
-全新的 HTTP 客户端 API 具有如下几个优势：
-- **HTTP/2支持**：全新的`HttpClient`支持 HTTP/2 协议的所有特性，包括同步和异步编程模型。
-- **WebSocket支持**：支持`WebSocket`，允许建立持久的连接，并进行全双工通信。
-- **同步和异步**：提供了同步和异步的两种模式。这意味着我们既可以等待HTTP响应，也可以使用回调机制处理HTTP响应。
-- **链式调用**：新的`HttpClient`允许链式调用，使得构建和发送请求变得更简单。
-- **更好的错误处理机制**：新的`HttpClient`提供了更好的错误处理机制，当HTTP请求失败时，可以通过异常机制更清晰地了解到发生了什么。
+## JEP 315: 改进 Aarch64 内联函数
 
-```java
-HttpClient client = HttpClient.newHttpClient();
+Aarch64 是 ARM 架构的 64 位版本，广泛应用于移动设备和服务器领域。该特性改进了 Java 虚拟机（JVM）在 Aarch64 架构上的内联函数实现，以提高性能。内联函数是一种编译器优化技术，它将函数调用替换为函数体本身，从而减少函数调用的开销。
 
-// 同步请求
-HttpRequest request = HttpRequest.newBuilder()
-        .uri(URI.create("https://???"))
-        .build();
+通过改进 Aarch64 内联函数，JVM 可以更好地利用 Aarch64 架构的硬件特性，提高代码的执行效率，特别是在一些计算密集型的应用程序中。
 
-HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+## JEP 318: Epsilon：无操作垃圾收集器
 
-System.out.println(response.statusCode());
-System.out.println(response.body());
+Epsilon 是一种无操作垃圾收集器，它不执行实际的垃圾回收操作。该特性主要用于性能测试和内存压力测试等场景。在传统的垃圾收集器中，垃圾回收过程会引入一定的停顿时间和性能开销，这可能会影响性能测试的准确性。
 
-// 异步请求
-client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-        .thenApply(HttpResponse::body)
-        .thenAccept(System.out::println)
-        .join();
-```
+使用 Epsilon 垃圾收集器，可以避免垃圾回收对性能测试的干扰，从而更准确地评估应用程序的性能。例如，在测试应用程序的内存使用情况时，可以使用 Epsilon 垃圾收集器来观察应用程序在没有垃圾回收的情况下的内存增长趋势。
 
-## JEP 323：局部变量类型推断的升级
-Java 10 引入局部变量类型推断，通过var关键字允许编译器推断变量的类型，这大大简化了Java代码的编写。但是在 Java 10 中我们是不能在 Lambda参数使用var，这在Java 11中得到了改进。
+## JEP 320: 移除 Java EE 和 CORBA 模块
 
-在Java 11中，我们可以使用`var`关键字来声明`Lambda`表达式输入参数的类型，允许在`Lambda`参数上使用注解或者省略类型。
+随着云计算和微服务架构的兴起，Java EE 和 CORBA 技术逐渐被新的技术所取代。为了简化 JDK 的体积和维护成本，Java 11 决定移除 Java EE 和 CORBA 模块。这些模块包括 JavaBeans Activation Framework（JAF）、Java API for XML Processing（JAXP）、Java API for XML Web Services（JAX-WS）、Java Management Extensions（JMX）、Java Transaction API（JTA）和 Common Object Request Broker Architecture（CORBA）等。
+
+移除这些模块后，JDK 将更加专注于核心的 Java 语言和平台功能，同时鼓励开发者使用其他更适合现代应用开发的技术和框架。
+
+## JEP 321: HTTP Client（标准化）
+
+Java 11 对 HTTP Client API 进行了标准化，使其成为 Java 标准库的一部分。在之前的版本中，HTTP Client API 是作为孵化器模块提供的，而 Java 11 将其正式纳入标准库，并提供了更稳定和完善的 API。
+
+新的 HTTP Client API 支持 HTTP/2 协议，提供了更简洁的 API 设计和更好的性能。开发者可以使用它来发送 HTTP 请求、处理响应、管理连接等，例如：
 
 ```java
-// Java 11之前的Lambda表达式
-BinaryOperator<Integer> adder = (a, b) -> a + b;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
-// Java 11使用var的Lambda表达式
-BinaryOperator<Integer> adder = (var a, var b) -> a + b;
+public class HttpClientExample {
+    public static void main(String[] args) throws Exception {
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create("https://example.com"))
+                .build();
 
-// 注解方式
-BinaryOperator<Integer> adder = (@NotNull var a, @NotNull var b) -> a + b;
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+        System.out.println(response.statusCode());
+        System.out.println(response.body());
+    }
+}
 ```
 
-## JEP 318：Epsilon—低开销垃圾回收器
-Epsilon 垃圾回收器的目标是开发一个控制内存分配，但是不执行任何实际的垃圾回收工作。它提供一个完全消极的 GC 实现，分配有限的内存资源，最大限度的降低内存占用和内存吞吐延迟时间。
+## JEP 323: Lambda 参数的局部变量语法
 
-Java 版本中已经包含了一系列的高度可配置化的 GC 实现。各种不同的垃圾回收器可以面对各种情况。但是有些时候使用一种独特的实现，而不是将其堆积在其他 GC 实现上将会是事情变得更加简单。
+该特性允许在 Lambda 表达式中使用 `var` 关键字来声明局部变量，从而使 Lambda 表达式的代码更加简洁和易读。在 Java 11 之前，Lambda 表达式中的参数类型必须显式声明，这可能会导致代码冗长。
 
-下面是 no-op GC 的几个使用场景：
-- **性能测试**：什么都不执行的 GC 非常适合用于 GC 的差异性分析。no-op （无操作）GC 可以用于过滤掉 GC 诱发的性能损耗，比如 GC 线程的调度，GC 屏障的消耗，GC 周期的不合适触发，内存位置变化等。此外有些延迟者不是由于 GC 引起的，比如 scheduling hiccups, compiler transition hiccups，所以去除 GC 引发的延迟有助于统计这些延迟。
-- **内存压力测试**：在测试 Java 代码时，确定分配内存的阈值有助于设置内存压力常量值。这时 no-op 就很有用，它可以简单地接受一个分配的内存分配上限，当内存超限时就失败。例如：测试需要分配小于 1G 的内存，就使用-Xmx1g 参数来配置 no-op GC，然后当内存耗尽的时候就直接 crash。
-- **VM 接口测试**：以 VM 开发视角，有一个简单的 GC 实现，有助于理解 VM-GC 的最小接口实现。它也用于证明 VM-GC 接口的健全性。
-- **极度短暂 job 任务**：一个短声明周期的 job 任务可能会依赖快速退出来释放资源，这个时候接收 GC 周期来清理 heap 其实是在浪费时间，因为 heap 会在退出时清理。并且 GC 周期可能会占用一会时间，因为它依赖 heap 上的数据量。 延迟改进：对那些极端延迟敏感的应用，开发者十分清楚内存占用，或者是几乎没有垃圾回收的应用，此时耗时较长的 GC 周期将会是一件坏事。
-- **吞吐改进**：即便对那些无需内存分配的工作，选择一个 GC 意味着选择了一系列的 GC 屏障，所有的 OpenJDK GC 都是分代的，所以他们至少会有一个写屏障。避免这些屏障可以带来一点点的吞吐量提升。
+例如，使用 `var` 关键字可以简化 Lambda 表达式中的参数声明：
 
-Epsilon 垃圾回收器和其他 OpenJDK 的垃圾回收器一样，可以通过参数`-XX:+UseEpsilonGC`开启。
+```java
+import java.util.Arrays;
+import java.util.List;
 
-Epsilon 线性分配单个连续内存块。可复用现存 VM 代码中的 TLAB 部分的分配功能。非 TLAB 分配也是同一段代码，因为在此方案中，分配 TLAB 和分配大对象只有一点点的不同。Epsilon 用到的 barrier 是空的(或者说是无操作的)。因为该 GC
-
-执行任何的 GC 周期，不用关系对象图，对象标记，对象复制等。引进一种新的 barrier-set 实现可能是该 GC 对 JVM 最大的变化。
-
-## ZGC：可伸缩低延迟垃圾收集器
-ZGC 即 Z Garbage Collector（垃圾收集器或垃圾回收器），这应该是 Java 11 中最为瞩目的特性，没有之一。ZGC 是一个可伸缩的、低延迟的垃圾收集器，主要为了满足如下目标进行设计：
-- GC 停顿时间不超过 10ms
-- 即能处理几百 MB 的小堆，也能处理几个 TB 的大堆
-- 应用吞吐能力不会下降超过 15%（与 G1 回收算法相比）
-- 方便在此基础上引入新的 GC 特性和利用 colord
-- 针以及 Load barriers 优化奠定基础
-
-当前只支持 Linux/x64 位平台 停顿时间在 10ms 以下，10ms 其实是一个很保守的数据，即便是 10ms 这个数据，也是 GC 调优几乎达不到的极值。根据 SPECjbb 2015 的基准测试，128G 的大堆下最大停顿时间才 1.68ms，远低于 10ms，和 G1 算法相比，改进非常明显。
-
-![img.png](img.png)
-
-不过目前 ZGC 还处于实验阶段，目前只在 Linux/x64 上可用，如果有足够的需求，将来可能会增加对其他平台的支持。同时作为实验性功能的 ZGC 将不会出现在 JDK 构建中，除非在编译时使用 configure 参数： --with-jvm-features=zgc 显式启用。
-
-在实验阶段，编译完成之后，已经迫不及待的想试试 ZGC，需要配置以下 JVM 参数，才能使用 ZGC，具体启动 ZGC 参数如下：
-
-`-XX：+ UnlockExperimentalVMOptions -XX：+ UseZGC -Xmx10g`
-
-其中参数：`-Xmx`是 ZGC 收集器中最重要的调优选项，大大解决了程序员在 JVM 参数调优上的困扰。ZGC 是一个并发收集器，必须要设置一个最大堆的大小，应用需要多大的堆，主要有下面几个考量：
-- 对象的分配速率，要保证在 GC 的时候，堆中有足够的内存分配新对象。
-- 一般来说，给 ZGC 的内存越多越好，但是也不能浪费内存，所以要找到一个平衡。
-
-## JEP 335：废弃 Nashorn JavaScript 引擎
-Nashorn JavaScript 引擎最初是在**JDK 8 **中引入的，用于取代 Rhino 脚本引擎，它允许在JVM上执行和调用JavaScript代码。但是随着 Java 11 的到来标志着 Nashorn JavaScript 引擎的废弃。
-
-Java 11 废弃 Nashorn JavaScript 引擎的主要原因是因为它难以跟上现代 JavaScript 发展的步伐，同时Oracle决定将资源集中在Java核心功能上，而不是维护与Java生态系统关联不大的组件，鼓励开发者转而使用更专注的JavaScript运行时环境，如Node.js。
-
-## 增加 Files API
-Java 11 为 Files 类增加了两个非常有用的实用方法，进一步简化了文件读写的操作：readString() 和 writeString()。
-- **Files.readString(Path path)**：读取一个文件的所有内容并将其返回为一个字符串。该方法非常适用于一次性读取整个文件。
-- **Files.writeString(Path path)**, CharSequence csq, OpenOption... options)：将一个字符串写入到文件中。
-
-## Optional API 增强
-Optional 是 Java 8 引入的，用来方便我们以一种更加优雅的方式来处理NullPointerException。Java 11 为了能够进一步方法我们使用它，新增了一个方法：
-- **isEmpty()**：判断容器是否为空，如果包含的值不存在，则返回 true。
-
-## JEP 328：飞行记录器（Flight Recorder）
-飞行记录器（Java Flight Recorder）是一种监控工具，它收集运行中的Java虚拟机（JVM）的详细运行时信息，这些信息可以用于诊断问题，以及分析和改进性能。飞行记录器之前是商业版 JDK 的一项分析工具，但从Java 11开始，它被贡献给了OpenJDK，成为了所有Java开发者可用的标准功能。
-
-飞行记录器记录的主要数据源于应用程序、JVM 和 OS，这些事件信息保存在单独的事件记录文件中，故障发生后，能够从事件记录文件中提取出有用信息对故障进行分析。启用参数：
-
-`java -XX:StartFlightRecording=filename=myrecording.jfr,duration=60s MyApplication`
-
-这条命令会启动一个60秒的飞行记录，并将结果保存在myrecording.jfr文件中。
-
-还可以使用 jcmd 工具在运行中的Java应用程序上启动和控制JFR，例如：
-```shell
-jcmd <PID> JFR.start
-jcmd <PID> JFR.dump filename=myrecording.jfr
-jcmd <PID> JFR.stop
+public class LambdaVarExample {
+    public static void main(String[] args) {
+        List<String> list = Arrays.asList("apple", "banana", "orange");
+        list.forEach((var fruit) -> System.out.println(fruit));
+    }
+}
 ```
-其中 <PID> 是Java进程的进程ID。
 
-收集到的JFR记录文件可以使用多种工具进行分析，最常用的是JDK Mission Control（JMC）。JMC提供了一个图形界面，用于查看和分析JFR产生的数据文件。
+## JEP 324: 使用 Curve25519 和 Curve448 进行密钥协商
 
-## JEP 330：运行单文件源码程序
-这项特性允许开发者直接运行一个包含源代码的单个Java文件，而无需事先将其编译成字节码。这个特性简化了运行简单Java程序的过程，使得快速测试和运行小段代码更加便捷。
+Curve25519 和 Curve448 是两种高效的椭圆曲线密码算法，它们提供了更高的安全性和性能。该特性在 Java 的加密库中引入了对 Curve25519 和 Curve448 的支持，使得开发者可以使用这些先进的密码算法进行密钥协商和加密通信。
 
-我们可以使用 Java 命令直接运行一个单文件的Java源代码，比如我们有一个名为 HelloWorld.java 的文件，内容如下：
+例如，使用 Curve25519 进行密钥协商：
+
+```java
+import javax.crypto.KeyAgreement;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.PrivateKey;
+import java.security.PublicKey;
+import java.security.spec.ECGenParameterSpec;
+
+public class Curve25519Example {
+    public static void main(String[] args) throws Exception {
+        // 生成 Curve25519 密钥对
+        KeyPairGenerator keyPairGenerator = KeyPairGenerator.getInstance("XDH");
+        keyPairGenerator.initialize(new ECGenParameterSpec("X25519"));
+        KeyPair keyPair1 = keyPairGenerator.generateKeyPair();
+        KeyPair keyPair2 = keyPairGenerator.generateKeyPair();
+
+        PrivateKey privateKey1 = keyPair1.getPrivate();
+        PublicKey publicKey2 = keyPair2.getPublic();
+
+        // 密钥协商
+        KeyAgreement keyAgreement1 = KeyAgreement.getInstance("XDH");
+        keyAgreement1.init(privateKey1);
+        keyAgreement1.doPhase(publicKey2, true);
+
+        byte[] sharedSecret1 = keyAgreement1.generateSecret();
+        System.out.println("Shared secret 1: " + bytesToHex(sharedSecret1));
+    }
+
+    private static String bytesToHex(byte[] bytes) {
+        StringBuilder sb = new StringBuilder();
+        for (byte b : bytes) {
+            sb.append(String.format("%02x", b));
+        }
+        return sb.toString();
+    }
+}
+```
+
+## JEP 327: Unicode 10
+
+Unicode 10 是 Unicode 标准的第十个版本，它引入了新的字符、表情符号和符号。Java 11 支持 Unicode 10 标准，使得开发者可以在 Java 应用程序中使用最新的 Unicode 字符。
+
+例如，可以使用 Unicode 10 中的新表情符号：
+
+```java
+public class Unicode10Example {
+    public static void main(String[] args) {
+        String faceWithSymbolsOnMouth = "\uD83E\uDD2C"; // 🤬
+        System.out.println("Face with symbols on mouth: " + faceWithSymbolsOnMouth);
+    }
+}
+```
+
+## JEP 328: 飞行记录器
+
+Java 飞行记录器（JFR）是一种用于记录和分析 Java 应用程序性能的工具。Java 11 对 JFR 进行了改进，使其更加易于使用和集成。JFR 可以记录应用程序的运行时信息，如方法调用、线程活动、内存使用等，帮助开发者诊断性能问题和优化应用程序。
+
+例如，可以使用 JFR 记录应用程序的运行时信息，并使用 Java Mission Control（JMC）工具进行分析：
+
+```java
+import jdk.jfr.*;
+import jdk.jfr.consumer.*;
+
+public class JFRExample {
+    @Label("Hello World")
+    @Description("A simple JFR event")
+    static class HelloWorld extends Event {
+        @Label("Message")
+        String message;
+    }
+
+    public static void main(String[] args) throws Exception {
+        // 创建 JFR 录制
+        Recording recording = new Recording();
+        recording.start();
+
+        // 触发 JFR 事件
+        HelloWorld event = new HelloWorld();
+        event.message = "Hello, World!";
+        event.commit();
+
+        // 停止录制
+        recording.stop();
+
+        // 保存录制文件
+        recording.dump(Paths.get("jfr_example.jfr"));
+
+        // 分析录制文件（可以使用 JMC 工具）
+        // 这里简单打印录制文件信息
+        System.out.println("Recording saved to jfr_example.jfr");
+    }
+}
+```
+
+## JEP 329: ChaCha20 和 Poly1305 加密算法
+
+ChaCha20 是一种流密码算法，Poly1305 是一种消息认证码算法。Java 11 在加密库中引入了对 ChaCha20 和 Poly1305 的支持，提供了更高效的加密和认证功能。这些算法在移动设备和低功耗设备上具有较好的性能表现。
+
+例如，使用 ChaCha20-Poly1305 进行加密和解密：
+
+```java
+import javax.crypto.*;
+import javax.crypto.spec.*;
+import java.security.*;
+import java.util.Base64;
+
+public class ChaCha20Poly1305Example {
+    public static void main(String[] args) throws Exception {
+        // 生成密钥
+        KeyGenerator keyGenerator = KeyGenerator.getInstance("ChaCha20-Poly1305");
+        SecretKey secretKey = keyGenerator.generateKey();
+
+        // 生成初始化向量（IV）
+        byte[] iv = new byte[12];
+        new SecureRandom().nextBytes(iv);
+
+        // 加密
+        Cipher cipher = Cipher.getInstance("ChaCha20-Poly1305");
+        cipher.init(Cipher.ENCRYPT_MODE, secretKey, new IvParameterSpec(iv));
+        byte[] plaintext = "Hello, World!".getBytes();
+        byte[] ciphertext = cipher.doFinal(plaintext);
+
+        System.out.println("Ciphertext: " + Base64.getEncoder().encodeToString(ciphertext));
+
+        // 解密
+        cipher.init(Cipher.DECRYPT_MODE, secretKey, new IvParameterSpec(iv));
+        byte[] decryptedText = cipher.doFinal(ciphertext);
+        System.out.println("Decrypted text: " + new String(decryptedText));
+    }
+}
+```
+
+## JEP 330: 启动单文件源代码程序
+
+Java 11 允许直接运行单个 Java 源代码文件，而无需先编译成类文件。这简化了小型 Java 程序的开发和测试过程，提高了开发效率。例如，有一个名为 `HelloWorld.java` 的文件，内容如下：
+
 ```java
 public class HelloWorld {
     public static void main(String[] args) {
@@ -167,21 +242,57 @@ public class HelloWorld {
     }
 }
 ```
-我们可以使用下面命令来执行这个 Java 文件
 
-`java HelloWorld.java`
+在 Java 11 中，可以直接使用以下命令运行该文件：
 
-输出内容为：
+```bash
+java HelloWorld.java
+```
 
-`Hello, World!`
+## JEP 331: 低开销堆分析
 
-## JEP 320：删除 Java EE 和 corba 模块
-在 Java 9 和 Java 10 中 Java EE（现Jakarta EE）和CORBA模块就已经被标记为弃用了，并且在默认情况下是不可用的，在 Java 11 中，被彻底移除了。删除的模块包括：
-- Java EE模块：
-  - java.xml.ws (JAX-WS, SOAP Web服务)
-  - java.xml.bind (JAXB, XML到Java对象的绑定)
-  - java.activation (JAF, JavaBeans Activation Framework)
-  - java.xml.ws.annotation (Web服务注解)
-  - javax.jws, javax.jws.soap, javax.xml.soap, 等等。
-- CORBA模块：
-  - java.corba (包含了CORBA、IDL和IIOP相关的类和接口)
+低开销堆分析允许开发者在不显著影响应用程序性能的情况下分析堆内存的使用情况。该特性通过与垃圾收集器集成，提供了实时的堆内存信息，帮助开发者诊断内存泄漏和优化内存使用。
+
+例如，可以使用低开销堆分析工具来获取堆内存的统计信息，如对象数量、内存占用等，从而找出内存泄漏的源头。
+
+## JEP 332: 传输层安全（TLS）1.3
+
+TLS 1.3 是传输层安全协议的最新版本，它提供了更高的安全性和性能。Java 11 支持 TLS 1.3 协议，使得 Java 应用程序可以使用更安全的加密通信。TLS 1.3 简化了握手过程，减少了通信延迟，同时提供了更强的加密算法支持。
+
+例如，在配置 Java 的 SSL 上下文时，可以启用 TLS 1.3 协议：
+
+```java
+import javax.net.ssl.*;
+import java.security.*;
+
+public class TLS13Example {
+    public static void main(String[] args) throws Exception {
+        // 创建 SSL 上下文
+        SSLContext sslContext = SSLContext.getInstance("TLS");
+
+        // 初始化 SSL 上下文（这里省略密钥和证书的配置）
+        // 实际应用中需要配置合适的密钥和证书
+        sslContext.init(null, null, null);
+
+        // 获取 SSL 套接字工厂
+        SSLSocketFactory sslSocketFactory = sslContext.getSocketFactory();
+
+        // 创建 SSL 套接字并连接到服务器（这里只是示例，实际需要指定服务器地址和端口）
+        // SSLSocket socket = (SSLSocket) sslSocketFactory.createSocket("example.com", 443);
+
+        // 配置 SSL 套接字使用 TLS 1.3 协议
+        // socket.setEnabledProtocols(new String[]{"TLSv1.3"});
+
+        System.out.println("TLS 1.3 support is available");
+    }
+}
+```
+
+## JEP 333: ZGC：可扩展的低延迟垃圾收集器（实验性）
+
+ZGC 是一种可扩展的低延迟垃圾收集器，旨在满足大规模应用程序对低延迟垃圾收集的需求。它采用了并发标记、并发整理和负载均衡等技术，能够在多核处理器上实现高效的垃圾收集，同时将垃圾收集的停顿时间控制在毫秒级别。
+
+由于 ZGC 在 Java 11 中是实验性特性，需要在启动 JVM 时使用特定的参数来启用，例如：
+
+```bash
+java -XX:+UnlockExperimentalVMOptions -XX:+UseZGC YourApplication
