@@ -1,253 +1,238 @@
 # Java 24
 
-- **JEP 478**:密钥派生函数 API(预览)
-- **JEP 483**:提前类加载和链接
-- **JEP 484**:类文件 API
-- **JEP 485**:流收集器
-- **JEP 486**:永久禁用安全管理器
-- **JEP 487**:作用域值(第四次预览)
-- **JEP 491**:虚拟线程的同步而不固定平台线程
-- **JEP 493**:在没有 JMOD 文件的情况下链接运行时镜像
-- **JEP 495**:简化的源文件和实例主方法（第四次预览）
-- **JEP 497**:量子抗性数字签名算法 (ML-DSA)
-- **JEP 498**:使用 sun.misc.Unsafe 内存访问方法时发出警告
-- **JEP 499**:结构化并发（第四次预览）
+- **JEP 404**: 分代式 Shenandoah（实验性）
+- **JEP 450**: 紧凑对象头（实验性）
+- **JEP 472**: 准备限制 JNI 的使用
+- **JEP 475**: G1 的后期屏障扩展
+- **JEP 478**: 密钥派生函数 API（预览）
+- **JEP 479**: 移除 Windows 32 位 x86 端口
+- **JEP 483**: 提前类加载与链接
+- **JEP 484**: 类文件 API
+- **JEP 485**: 流收集器
+- **JEP 486**: 永久禁用安全管理器
+- **JEP 487**: 作用域值（第四次预览）
+- **JEP 488**: 模式、instanceof 和 switch 中的基本类型（第二次预览）
+- **JEP 489**: 向量 API（第九次孵化）
+- **JEP 490**: ZGC：移除非分代模式
+- **JEP 491**: 无需固定同步虚拟线程
+- **JEP 492**: 灵活的构造函数体（第三次预览）
+- **JEP 493**: 无 JMODs 链接运行时镜像
+- **JEP 494**: 模块导入声明（第二次预览）
+- **JEP 495**: 简单源文件和实例主方法（第四次预览）
+- **JEP 496**: 量子抗性模块 - 基于格的密钥封装机制
+- **JEP 497**: 量子抗性模块 - 基于格的数字签名算法
+- **JEP 498**: 使用 sun.misc.Unsafe 中的内存访问方法时发出警告
+- **JEP 499**: 结构化并发（第四次预览）
+- **JEP 501**: 弃用 32 位 x86 端口以待移除
 
----
+## JEP 404: 分代式 Shenandoah（实验性）
+
+分代式 Shenandoah 是对 Shenandoah 垃圾回收器的改进，引入了分代收集的概念。它将堆内存划分为年轻代和老年代，针对不同代的特点采用不同的垃圾回收策略。年轻代采用复制算法，快速回收短生命周期对象；老年代采用 Shenandoah 原有的并发标记压缩算法，减少垃圾回收停顿时间，提高应用程序的响应速度。这一特性对于内存占用较大且对响应时间要求较高的应用场景非常有帮助。
+
+## JEP 450: 紧凑对象头（实验性）
+
+紧凑对象头旨在优化对象的内存布局，减少对象头的大小。对象头通常包含对象的相关元数据，如标记字、类指针等。通过紧凑对象头技术，可以压缩这些元数据的存储空间，从而节省内存。这对于内存敏感的应用程序，如大规模数据处理和缓存系统，能够显著提高内存使用效率，减少内存碎片。
+
+## JEP 472: 准备限制 JNI 的使用
+
+JNI（Java Native Interface）允许 Java 代码与本地代码（如 C/C++）进行交互，但这也带来了一些安全性和性能方面的问题。该特性准备对 JNI 的使用进行限制，以增强 Java 平台的安全性和稳定性。具体措施可能包括限制某些 JNI 函数的调用、增加安全检查等，确保 JNI 的使用不会对 Java 应用程序造成潜在风险。
+
+## JEP 475: G1 的后期屏障扩展
+
+G1（Garbage - First）垃圾回收器是一种面向服务端应用的垃圾回收器。该特性对 G1 的后期屏障进行了扩展，后期屏障是在垃圾回收过程中用于跟踪对象引用变化的一种机制。通过扩展后期屏障，G1 可以更准确地跟踪对象引用，优化垃圾回收的标记和清理过程，提高垃圾回收的效率和性能，减少垃圾回收对应用程序性能的影响。
 
 ## JEP 478: 密钥派生函数 API（预览）
 
-密钥派生函数 API 是一种用于从初始密钥和其他数据派生额外密钥的加密算法。它的核心作用是为不同的加密目的（如加密、认证等）生成多个不同的密钥，避免密钥重复使用带来的安全隐患。 这在现代加密中是一个重要的里程碑，为后续新兴的量子计算环境打下了基础
-
-通过该 API，开发者可以使用最新的密钥派生算法（如 HKDF 和未来的 Argon2）：
+密钥派生函数 API 提供了一种标准化的方式来从初始密钥和其他数据派生额外的密钥。在现代加密中，为了避免密钥重复使用带来的安全隐患，通常需要为不同的加密目的生成多个不同的密钥。该 API 允许开发者使用统一的接口调用不同的密钥派生算法，如 HKDF、PBKDF2 等，方便地实现密钥派生功能，提高加密应用的安全性和开发效率。
 
 ```java
-// 创建一个 KDF 对象，使用 HKDF-SHA256 算法
-KDF hkdf = KDF.getInstance("HKDF-SHA256");
+// 示例代码：使用 HKDF 算法派生密钥
+import javax.crypto.SecretKey;
+import javax.crypto.spec.SecretKeySpec;
+import java.security.spec.AlgorithmParameterSpec;
+import java.security.spec.HKDFParameterSpec;
+import java.security.KeyDerivationFunction;
 
-// 创建 Extract 和 Expand 参数规范
-AlgorithmParameterSpec params =
-    HKDFParameterSpec.ofExtract()
-                     .addIKM(initialKeyMaterial) // 设置初始密钥材料
-                     .addSalt(salt)             // 设置盐值
-                     .thenExpand(info, 32);     // 设置扩展信息和目标长度
+public class KeyDerivationExample {
+    public static void main(String[] args) throws Exception {
+        // 初始密钥材料
+        byte[] initialKeyMaterial = "initial_key_material".getBytes();
+        // 盐值
+        byte[] salt = "salt_value".getBytes();
+        // 扩展信息
+        byte[] info = "info_data".getBytes();
 
-// 派生一个 32 字节的 AES 密钥
-SecretKey key = hkdf.deriveKey("AES", params);
+        // 创建 KDF 对象，使用 HKDF - SHA256 算法
+        KeyDerivationFunction hkdf = KeyDerivationFunction.getInstance("HKDF - SHA256");
 
-// 可以使用相同的 KDF 对象进行其他密钥派生操作
+        // 创建 Extract 和 Expand 参数规范
+        AlgorithmParameterSpec params =
+                HKDFParameterSpec.ofExtract()
+                        .addIKM(initialKeyMaterial)
+                        .addSalt(salt)
+                        .thenExpand(info, 32);
+
+        // 派生一个 32 字节的 AES 密钥
+        SecretKey key = hkdf.deriveKey(new SecretKeySpec(new byte[0], "AES"), params);
+
+        System.out.println("Derived key length: " + key.getEncoded().length);
+    }
+}
 ```
 
-## JEP 483: 提前类加载和链接
+## JEP 479: 移除 Windows 32 位 x86 端口
 
-在传统 JVM 中，应用在每次启动时需要动态加载和链接类。这种机制对启动时间敏感的应用（如微服务或无服务器函数）带来了显著的性能瓶颈。该特性通过缓存已加载和链接的类，显著减少了重复工作的开销，显著减少 Java 应用程序的启动时间。测试表明，对大型应用（如基于 Spring 的服务器应用），启动时间可减少 40% 以上。
+随着计算机硬件的发展，64 位架构已经成为主流。为了简化 JDK 的开发和维护，该特性决定移除对 Windows 32 位 x86 架构的支持。这意味着从 Java 24 开始，JDK 将不再提供适用于 Windows 32 位 x86 处理器的版本。这一变化将使 JDK 能够更专注于 64 位架构的优化和功能开发，提高性能和安全性，同时符合行业趋势，因为大多数现代 Windows 计算机都已经采用 64 位操作系统和处理器。
 
-这个优化是零侵入性的，对应用程序、库或框架的代码无需任何更改，启动也方式保持一致，仅需添加相关 JVM 参数（如 `-XX:+ClassDataSharing`）。
+## JEP 483: 提前类加载与链接
+
+提前类加载与链接允许在应用程序启动前对类进行加载和链接操作。传统的类加载和链接是在应用程序运行时动态进行的，这会增加应用程序的启动时间。通过提前进行这些操作，JVM 可以在启动前完成类的初始化准备工作，减少启动时的延迟，提高应用程序的启动速度。这对于需要快速启动的应用程序，如桌面应用和服务器应用，非常有帮助。
 
 ## JEP 484: 类文件 API
 
-类文件 API 在 JDK 22 进行了第一次预览（[JEP 457](https://openjdk.org/jeps/457)），在 JDK 23 进行了第二次预览并进一步完善（[JEP 466](https://openjdk.org/jeps/466)）。最终，该特性在 JDK 24 中顺利转正。
-
-类文件 API 的目标是提供一套标准化的 API，用于解析、生成和转换 Java 类文件，取代过去对第三方库（如 ASM）在类文件处理上的依赖。
+类文件 API 提供了一组用于操作 Java 类文件的接口和类。开发者可以使用该 API 读取、修改和生成 Java 类文件，实现动态代码生成、类文件分析等功能。这对于一些需要动态生成代码或对类文件进行定制化处理的框架和工具非常有用，例如 AOP（面向切面编程）框架、代码优化工具等。
 
 ```java
-// 创建一个 ClassFile 对象，这是操作类文件的入口。
-ClassFile cf = ClassFile.of();
-// 解析字节数组为 ClassModel
-ClassModel classModel = cf.parse(bytes);
+// 示例代码：使用类文件 API 读取类文件信息
+import jdk.incubator.classfile.*;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
-// 构建新的类文件，移除以 "debug" 开头的所有方法
-byte[] newBytes = cf.build(classModel.thisClass().asSymbol(),
-        classBuilder -> {
-            // 遍历所有类元素
-            for (ClassElement ce : classModel) {
-                // 判断是否为方法 且 方法名以 "debug" 开头
-                if (!(ce instanceof MethodModel mm
-                        && mm.methodName().stringValue().startsWith("debug"))) {
-                    // 添加到新的类文件中
-                    classBuilder.with(ce);
-                }
-            }
-        });
+public class ClassFileApiExample {
+    public static void main(String[] args) throws IOException {
+        byte[] classBytes = Files.readAllBytes(Paths.get("MyClass.class"));
+        ClassFile classFile = ClassFile.parse(classBytes);
+
+        System.out.println("Class name: " + classFile.getName());
+        System.out.println("Super class name: " + classFile.getSuperName());
+
+        for (FieldInfo field : classFile.getFields()) {
+            System.out.println("Field: " + field.getName() + ", type: " + field.getDescriptor());
+        }
+
+        for (MethodInfo method : classFile.getMethods()) {
+            System.out.println("Method: " + method.getName() + ", descriptor: " + method.getDescriptor());
+        }
+    }
+}
 ```
 
 ## JEP 485: 流收集器
 
-流收集器 `Stream::gather(Gatherer)` 是一个强大的新特性，它允许开发者定义自定义的中间操作，从而实现更复杂、更灵活的数据转换。`Gatherer` 接口是该特性的核心，它定义了如何从流中收集元素，维护中间状态，并在处理过程中生成结果。
-
-与现有的 `filter`、`map` 或 `distinct` 等内置操作不同，`Stream::gather` 使得开发者能够实现那些难以用标准 Stream 操作完成的任务。例如，可以使用 `Stream::gather` 实现滑动窗口、自定义规则的去重、或者更复杂的状态转换和聚合。 这种灵活性极大地扩展了 Stream API 的应用范围，使开发者能够应对更复杂的数据处理场景。
-
-基于 `Stream::gather(Gatherer)` 实现字符串长度的去重逻辑：
+流收集器是 Java 流 API 的扩展，它提供了一种更方便的方式将流中的元素收集到特定的数据结构中。传统的流收集操作通常使用 `Collectors` 类提供的方法，但这些方法在某些场景下可能不够灵活。流收集器允许开发者自定义收集逻辑，将流元素收集到自定义的数据结构中，或者对收集过程进行更复杂的处理，提高了流操作的灵活性和功能性。
 
 ```java
-var result = Stream.of("foo", "bar", "baz", "quux")
-                   .gather(Gatherer.ofSequential(
-                       HashSet::new, // 初始化状态为 HashSet,用于保存已经遇到过的字符串长度
-                       (set, str, downstream) -> {
-                           if (set.add(str.length())) {
-                               return downstream.push(str);
-                           }
-                           return true; // 继续处理流
-                       }
-                   ))
-                   .toList();// 转换为列表
+import java.util.*;
+import java.util.stream.*;
 
-// 输出结果 ==> [foo, quux]
+public class StreamGatherersExample {
+    public static void main(String[] args) {
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);
+
+        // 使用自定义的流收集器将偶数收集到一个 Set 中，奇数收集到一个 List 中
+        Map<Boolean, Object> result = numbers.stream().collect(
+                Collectors.partitioningBy(
+                        n -> n % 2 == 0,
+                        Collectors.teeing(
+                                Collectors.toSet(),
+                                Collectors.toList(),
+                                (set, list) -> new Object[]{set, list}
+                        )
+                )
+        );
+
+        Set<Integer> evenSet = (Set<Integer>) ((Object[]) result.get(true))[0];
+        List<Integer> oddList = (List<Integer>) ((Object[]) result.get(false))[1];
+
+        System.out.println("Even numbers: " + evenSet);
+        System.out.println("Odd numbers: " + oddList);
+    }
+}
 ```
 
 ## JEP 486: 永久禁用安全管理器
 
-JDK 24 不再允许启用 `Security Manager`，即使通过 `java -Djava.security.manager`命令也无法启用，这是逐步移除该功能的关键一步。虽然 `Security Manager` 曾经是 Java 中限制代码权限（如访问文件系统或网络、读取或写入敏感文件、执行系统命令）的重要工具，但由于复杂性高、使用率低且维护成本大，Java 社区决定最终移除它。
+安全管理器是 Java 平台中用于实现安全策略的组件，它可以限制 Java 应用程序的权限，如文件访问、网络访问等。然而，随着 Java 安全模型的发展和其他安全机制的不断完善，安全管理器的使用逐渐减少。该特性决定永久禁用安全管理器，以简化 Java 平台的安全架构，减少安全管理的复杂性。禁用安全管理器后，Java 应用程序将不再依赖该组件进行安全控制，而是采用更现代的安全机制。
 
-## JEP 487: 作用域值 （第四次预览）
+## JEP 487: 作用域值（第四次预览）
 
-作用域值（Scoped Values）可以在线程内和线程间共享不可变的数据，优于线程局部变量，尤其是在使用大量虚拟线程时。
-
-```java
-final static ScopedValue<...> V = new ScopedValue<>();
-
-// In some method
-ScopedValue.where(V, <value>)
-           .run(() -> { ... V.get() ... call methods ... });
-
-// In a method called directly or indirectly from the lambda expression
-... V.get() ...
-```
-
-作用域值允许在大型程序中的组件之间安全有效地共享数据，而无需求助于方法参数。
-
-## JEP 491: 虚拟线程的同步而不固定平台线程
-
-优化了虚拟线程与 `synchronized` 的工作机制。 虚拟线程在 `synchronized` 方法和代码块中阻塞时，通常能够释放其占用的操作系统线程（平台线程），避免了对平台线程的长时间占用，从而提升应用程序的并发能力。 这种机制避免了“固定 (Pinning)”——即虚拟线程长时间占用平台线程，阻止其服务于其他虚拟线程的情况。
-
-现有的使用 `synchronized` 的 Java 代码无需修改即可受益于虚拟线程的扩展能力。 例如，一个 I/O 密集型的应用程序，如果使用传统的平台线程，可能会因为线程阻塞而导致并发能力下降。 而使用虚拟线程，即使在 `synchronized` 块中发生阻塞，也不会固定平台线程，从而允许平台线程继续服务于其他虚拟线程，提高整体的并发性能。
-
-## JEP 493：在没有 JMOD 文件的情况下链接运行时镜像
-
-默认情况下，JDK 同时包含运行时镜像（运行时所需的模块）和 JMOD 文件。这个特性使得 jlink 工具无需使用 JDK 的 JMOD 文件就可以创建自定义运行时镜像，减少了 JDK 的安装体积（约 25%）。
-
-说明：
-
-- Jlink 是随 Java 9 一起发布的新命令行工具。它允许开发人员为基于模块的 Java 应用程序创建自己的轻量级、定制的 JRE。
-- JMOD 文件是 Java 模块的描述文件，包含了模块的元数据和资源。
-
-## JEP 495: 简化的源文件和实例主方法（第四次预览）
-
-这个特性主要简化了 `main` 方法的的声明。对于 Java 初学者来说，这个 `main` 方法的声明引入了太多的 Java 语法概念，不利于初学者快速上手。
-
-没有使用该特性之前定义一个 `main` 方法：
+作用域值是一种在特定作用域内共享不可变数据的机制。它类似于线程局部变量，但更适用于虚拟线程和结构化并发等新的编程模型。作用域值允许在大型程序中的组件之间安全有效地共享数据，而无需求助于方法参数。这对于减少代码冗余和提高代码的可维护性非常有帮助。在第四次预览中，可能会对作用域值的性能、易用性等方面进行进一步的优化和改进。
 
 ```java
-public class HelloWorld {
+import jdk.incubator.concurrent.ScopedValue;
+import jdk.incubator.concurrent.ScopedValue.Where;
+
+public class ScopedValuesExample {
+    private static final ScopedValue<String> USER_NAME = ScopedValue.newInstance();
+
     public static void main(String[] args) {
-        System.out.println("Hello, World!");
+        Where<String> where = ScopedValue.where(USER_NAME, "Alice");
+        where.run(() -> {
+            System.out.println("Hello, " + USER_NAME.get());
+            nestedScope();
+        });
+    }
+
+    private static void nestedScope() {
+        Where<String> nestedWhere = ScopedValue.where(USER_NAME, "Bob");
+        nestedWhere.run(() -> {
+            System.out.println("Nested scope: " + USER_NAME.get());
+        });
     }
 }
 ```
 
-使用该新特性之后定义一个 `main` 方法：
+## JEP 488: 模式、instanceof 和 switch 中的基本类型（第二次预览）
+
+该特性扩展了模式匹配的功能，允许在 `instanceof` 操作符和 `switch` 表达式中使用基本类型。这使得代码更加简洁和易读，减少了不必要的类型转换。在第二次预览中，可能会根据用户反馈对语法和语义进行进一步的调整和完善，提高该特性的稳定性和可用性。
 
 ```java
-class HelloWorld {
-    void main() {
-        System.out.println("Hello, World!");
+public class PatternMatchingWithPrimitivesExample {
+    public static void main(String[] args) {
+        Object obj = 42;
+        if (obj instanceof int i) {
+            System.out.println("It's an int: " + i);
+        }
+
+        int value = 2;
+        String result = switch (value) {
+            case 1 -> "One";
+            case 2 -> "Two";
+            case 3 -> "Three";
+            default -> "Unknown";
+        };
+        System.out.println(result);
     }
 }
 ```
 
-进一步简化（未命名的类允许我们省略类名）
+## JEP 489: 向量 API（第九次孵化）
+
+向量 API 提供了一种高效的方式来进行向量计算，适用于科学计算、机器学习等领域。该特性通过引入一组新的类和接口，允许开发者使用硬件加速的向量指令来执行计算，从而提高性能。在第九次孵化中，可能会对向量 API 的功能、性能和兼容性进行进一步的优化和测试，为正式发布做准备。
 
 ```java
-void main() {
-   System.out.println("Hello, World!");
-}
-```
+import jdk.incubator.vector.*;
 
-## JEP 497: 量子抗性数字签名算法 (ML-DSA)
+public class VectorApiExample {
+    public static void main(String[] args) {
+        // 创建两个向量
+        IntVector vector1 = IntVector.fromArray(VectorSpecies.ofDefault(int.class), new int[]{1, 2, 3, 4}, 0);
+        IntVector vector2 = IntVector.fromArray(VectorSpecies.ofDefault(int.class), new int[]{5, 6, 7, 8}, 0);
 
-JDK 24 引入了支持实施抗量子的基于模块晶格的数字签名算法 （Module-Lattice-Based Digital Signature Algorithm, **ML-DSA**），为抵御未来量子计算机可能带来的威胁做准备。
+        // 执行向量加法
+        IntVector result = vector1.add(vector2);
 
-ML-DSA 是美国国家标准与技术研究院（NIST）在 FIPS 204 中标准化的量子抗性算法，用于数字签名和身份验证。
+        // 将结果存储到数组中
+        int[] output = new int[4];
+        result.intoArray(output, 0);
 
-## JEP 498: 使用 `sun.misc.Unsafe` 内存访问方法时发出警告
-
-JDK 23([JEP 471](https://openjdk.org/jeps/471)) 提议弃用 `sun.misc.Unsafe` 中的内存访问方法，这些方法将来的版本中会被移除。在 JDK 24 中，当首次调用 `sun.misc.Unsafe` 的任何内存访问方法时，运行时会发出警告。
-
-这些不安全的方法已有安全高效的替代方案：
-
-- `java.lang.invoke.VarHandle` ：JDK 9 (JEP 193) 中引入，提供了一种安全有效地操作堆内存的方法，包括对象的字段、类的静态字段以及数组元素。
-- `java.lang.foreign.MemorySegment` ：JDK 22 (JEP 454) 中引入，提供了一种安全有效地访问堆外内存的方法，有时会与 `VarHandle` 协同工作。
-
-这两个类是 Foreign Function & Memory API（外部函数和内存 API） 的核心组件，分别用于管理和操作堆外内存。Foreign Function & Memory API 在 JDK 22 中正式转正，成为标准特性。
-
-```java
-import jdk.incubator.foreign.*;
-import java.lang.invoke.VarHandle;
-
-// 管理堆外整数数组的类
-class OffHeapIntBuffer {
-
-    // 用于访问整数元素的VarHandle
-    private static final VarHandle ELEM_VH = ValueLayout.JAVA_INT.arrayElementVarHandle();
-
-    // 内存管理器
-    private final Arena arena;
-
-    // 堆外内存段
-    private final MemorySegment buffer;
-
-    // 构造函数，分配指定数量的整数空间
-    public OffHeapIntBuffer(long size) {
-        this.arena  = Arena.ofShared();
-        this.buffer = arena.allocate(ValueLayout.JAVA_INT, size);
-    }
-
-    // 释放内存
-    public void deallocate() {
-        arena.close();
-    }
-
-    // 以volatile方式设置指定索引的值
-    public void setVolatile(long index, int value) {
-        ELEM_VH.setVolatile(buffer, 0L, index, value);
-    }
-
-    // 初始化指定范围的元素为0
-    public void initialize(long start, long n) {
-        buffer.asSlice(ValueLayout.JAVA_INT.byteSize() * start,
-                       ValueLayout.JAVA_INT.byteSize() * n)
-              .fill((byte) 0);
-    }
-
-    // 将指定范围的元素复制到新数组
-    public int[] copyToNewArray(long start, int n) {
-        return buffer.asSlice(ValueLayout.JAVA_INT.byteSize() * start,
-                              ValueLayout.JAVA_INT.byteSize() * n)
-                     .toArray(ValueLayout.JAVA_INT);
+        // 输出结果
+        System.out.println(java.util.Arrays.toString(output)); // [6, 8, 10, 12]
     }
 }
 ```
 
-## JEP 499: 结构化并发（第四次预览）
+## JEP 490: ZGC：移除非分代模式
 
-JDK 19 引入了结构化并发，一种多线程编程方法，目的是为了通过结构化并发 API 来简化多线程编程，并不是为了取代`java.util.concurrent`，目前处于孵化器阶段。
-
-结构化并发将不同线程中运行的多个任务视为单个工作单元，从而简化错误处理、提高可靠性并增强可观察性。也就是说，结构化并发保留了单线程代码的可读性、可维护性和可观察性。
-
-结构化并发的基本 API 是`StructuredTaskScope`，它支持将任务拆分为多个并发子任务，在它们自己的线程中执行，并且子任务必须在主任务继续之前完成。
-
-`StructuredTaskScope` 的基本用法如下：
-
-```java
-    try (var scope = new StructuredTaskScope<Object>()) {
-        // 使用fork方法派生线程来执行子任务
-        Future<Integer> future1 = scope.fork(task1);
-        Future<String> future2 = scope.fork(task2);
-        // 等待线程完成
-        scope.join();
-        // 结果的处理可能包括处理或重新抛出异常
-        ... process results/exceptions ...
-    } // close
-```
-
-结构化并发非常适合虚拟线程，虚拟线程是 JDK 实现的轻量级线程。许多虚拟线程共享同一个操作系统线程，从而允许非常多的虚拟线程。
+ZGC（Z Garbage Collector）是一种高性能的垃圾回收器，它具有低延迟的特点。该特性移除了 ZGC 的非分代模式，使 ZGC 专注于分代收集策略。分代收集可以根据对象
